# Conversational-AI

./: .gitignore  README.md  app.py  evaluation_results.csv  main.py  package-lock.json  pyproject.toml
config/: training_config.yaml
data/raw/: it_support_data.csv
models/conversational-finetuned/: README.md  adapter_config.json
models/conversational-finetuned/checkpoint-230/: README.md  trainer_state.json
notebooks/: 01_data_exploration.ipynb  02_model_finetuning.ipynb  02_model_finetuning_fixed.ipynb  03_model_evaluation.ipynb  03_model_evalution_fixed.ipynb  final_submission_notebook.ipynb
research_paper/: PROJECT_DOCS.md  main_paper.md
scripts/: data_collection.py  preprocessing.py  validate_data.py
src/: __init__.py  chatbot.py  data_collection.py  model_handler.py  preprocessing.py
tests/: test_queries.json
